--- a/scss/partials/_body.scss
+++ b/scss/partials/_body.scss
@@ -8,13 +8,47 @@
 }
 
 .car {
-    opacity:0;
+    // opacity:0; //kom do usunięcia
 }
 .carBody {
     position: relative;
     // top: 50px;
 }
 
+// Halogen in bumper
+.frontSmallBumper {
+    width: 15px;
+    height: 15px;
+    background: $color-body;
+    border-radius: 50% 0% 0% 50%/ 50% 0% 0% 20%;
+    position: absolute;
+    top: 132px;
+    left: -3px;
+    transform: rotate(15deg)skew(2deg);
+}
+.frontBumperHalogen {
+    width: 20px;
+    height: 25px;
+    background: #000;
+    position: absolute;
+    top: 110px;
+    left: 10px;
+    border-radius: 40% 5% 10% 5%/5% 5% 20% 30%;
+    box-shadow: -3px 2px 15px #000000;
+}
+.halogenLight {
+    
+    box-shadow: -10px 0px 20px #fff;
+    width: 3px;
+    height: 20px;
+    position: absolute;
+    background: #999;
+    top: 2px;
+    left: 16px;
+    border-radius: 50% 0% 0% 50%/50% 0% 0% 50%;
+}
+
+// All car body
 .body {
     height: 170px;
     width:850px;
