--- a/scss/partials/_body.scss
+++ b/scss/partials/_body.scss
@@ -12,7 +12,6 @@
 }
 .carBody {
     position: relative;
-    // top: 50px;
 }
 
 // Halogen in bumper and all Front
@@ -28,22 +27,22 @@
 }
 .frontBumperHalogen {
     width: 20px;
-    height: 25px;
+    height: 23px;
     background: #000;
     position: absolute;
-    top: 110px;
+    top: 112px;
     left: 10px;
-    border-radius: 40% 5% 10% 5%/5% 5% 20% 30%;
+    border-radius: 40% 5% 50% 5%/5% 5% 20% 30%;
     box-shadow: -5px -1px 20px #000000;
 }
 .halogenLight {
     
     box-shadow: -10px 0px 20px #fff;
     width: 3px;
-    height: 20px;
+    height: 18px;
     position: absolute;
     background: #999;
-    top: 2px;
+    top: 1px;
     left: 16px;
     border-radius: 50% 0% 0% 50%/50% 0% 0% 50%;
 }
@@ -76,6 +75,127 @@
         }
     }
 }
+#bumperLine {
+    background: #630000;
+    position: absolute;
+    width: 100px;
+    height: 0.5px;
+    top: 111px;
+    left: 13px;
+    transform: skew(0deg, -1deg);
+}
+.licensePlate {
+    height: 25px;
+    position: absolute;
+    top: 85px;
+    left:2px;
+    border-bottom: 1px solid transparent;
+    border-top: 2px solid transparent;
+    border-left: 30px solid #660000;
+}
+#brow {
+    height: 1px;
+    width: 15px;
+    background: #000;
+    position: absolute;
+    left: -7px;
+    top:-0.3px;
+    transform: skew(0deg, -9deg);
+}
+#brow2 {
+    height: 1px;
+    width: 10px;
+    background: #000;
+    position: absolute;
+    top: 19px;
+    left: -5px;
+}
+.frontReflector {
+    height: 25px;
+    position: absolute;
+    border-top: 5px solid transparent;
+    border-right: 30px solid #000;
+    top: 56px;
+    left: 11px;
+    transform: skew(-7deg);
+    border-radius: 12% 12% 0% 0% / 5% 5% 0% 0%;
+    box-shadow:-11px 3px 10px -3px #450000;
+}
+.frontReflector2 {
+    height: 26px;
+    position: absolute;
+    border-top: 5px solid transparent;
+    border-right: 30px solid #000;
+    top: -6px;
+    left: 3px;
+    transform: skew(-12deg);
+    border-radius: 12% 12% 0% 0% / 5% 5% 0% 0%;
+}
+#frontBulb1 {
+    height: 20px;
+    position: absolute;
+    border-top: 3.5px solid transparent;
+    border-right: 20px solid #666;
+    top: -4.5px;
+    left: 9px;
+    transform: skew(-2deg)
+}
+#frontBulb2 {
+    height: 17px;
+    position: absolute;
+    border-top: 2px solid transparent;
+    border-right: 10px solid #000;
+    top: -1px;
+    left: 2.5px;
+    transform: skew(20deg);
+}
+.frontBulb {
+    width: 1.5px;
+    height: 16px;
+    background: $color-lightOff;
+    position: absolute;
+    border-radius: 50%;
+    box-shadow: 2px 0px 9px #000;
+}
+#bulb1 {
+    left: 9.4px;
+    top: -1.5px;
+}
+#bulb2 {
+    left: 15px;
+    top: -2.5px;
+}
+#bulb3 {
+    left: 21px;
+    top: -3.5px;
+}
+#finger {
+    width: 15px;
+    height: 2px;
+    background: #666;
+    position: absolute;
+    left: -5.5px;
+    top: 6px;
+}
+#hoodLine {
+    background: #630000;
+    position: absolute;
+    width: 94px;
+    height: 0.5px;
+    top: 60px;
+    left: 47px;
+    transform: skew(0deg, 2deg);
+}
+#hoodLine2 {
+    background: #630000;
+    position: absolute;
+    width: 2.5px;
+    height: 0.5px;
+    top: 62.1px;
+    left: 140.5px;
+    transform: skew(0deg, 25deg);
+}
+
 // Between wheels
 .doorStep {
     width: 420px;
@@ -102,8 +222,8 @@
     height: 170px;
     width:850px;
     border: 1px solid $color-body;
-    position: absolute;
-    top: 129px;
+    position: relative;
+    top: 299px;
     left: 23px;
     transform: skew(-5deg, -1.5deg);
     border-radius: 30% 0% 0% 50%/40% 0% 0% 15%;
@@ -116,7 +236,7 @@
     width:220px;
     border: 1px solid $color-body;
     position: absolute;
-    top: 45px;
+    top: 215px;
     left: 340px;
     transform: skew(-40deg, -1.5deg);
     border-radius: 290% 0% 0% 0%/450% 0% 0% 0%;
@@ -128,7 +248,7 @@
     width:200px;
     border: 1px solid $color-body;
     position: absolute;
-    top: 39px;
+    top: 209px;
     left: 650px;
     transform: skew(40deg, -1.5deg);
     border-radius: 0% 199% 0% 0%/0% 200% 0% 0%;
@@ -140,7 +260,7 @@
     width:295px;
     border: 1px solid $color-body;
     position: absolute;
-    top: 42px;
+    top: 212px;
     left: 425px;
     transform: skew(0deg, -1.5deg);
     border-radius: 50%/25%;
@@ -151,7 +271,7 @@
     height: 100px;
     border: 1px solid $color-body;
     position: absolute;
-    top :105px;
+    top :275px;
     left: 853px;
     border-radius: 15%/50%;
     transform: skew(0deg, 2deg);
@@ -163,7 +283,7 @@
     height: 97px;
     border: 1px solid $color-body;
     position: absolute;
-    top :184px;
+    top :354px;
     left: 827px;
     transform: skew(0deg, -4deg);
     border-radius: 0% 25% 20% 0%/0% 10% 20% 0%;
