--- a/scss/partials/_frontCarBody.scss
+++ b/scss/partials/_frontCarBody.scss
@@ -13,8 +13,9 @@
 }
 .frontCar {
     // opacity: 0;
+    top: 150px;
     position: absolute;
-    display: none; //do usunięcia 
+    // display: none; //do usunięcia 
 }
 .allDoor {
     opacity: 0;
